Adding mem settings for JVM